[tool.poetry]
name = "chessnutpy"
version = "0.1.0"
description = ""
authors = ["FMF <fmfs@posteo.net>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9,<3.13"
async-timeout = "4.0.3"
asyncio = "3.4.3"
bleak = "0.21.1"
aiohttp = "3.9.0rc0"
configargparse = "1.5.3"
chess = "1.10.0"
berserk = "0.10.0"
platformdirs = "3.11"
ipython = "^8.7.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
